<resources>
    <string name="app_name">Collectify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_login">Login nie może być krótszy niż 5 znaków i dłuższy niż 15 znaków. Więcej zasad znajdziesz w zakładce informacje.</string>
    <string name="info_login_two">Login poprawny.</string>
    <string name="info_login_four">Login zbyt długi.</string>
    <string name="info_login_six">Wykryto niedozwolone znaki lub login jest za krótki.</string>
    <string name="info_error_in_the_second_password">Hasła nie są takie same.</string>//
    <string name="login_busy">Login niedostepny.</string>

    <string name="info_password">Hasło nie może być krótsze niż 5 znaków i dłuższe niż 15 znaków. Więcej zasad znajdziesz w zakładce informacje.</string>
    <string name="info_password_two">Hasło poprawne.</string>
    <string name="info_password_three">Hasło zbyt długie.</string>
    <string name="info_password_four">Wykryto niedozwolone znaki lub hasło jest za krótkie.</string>
    <string name="info_password_five">W haśle brak durzej litery.</string>
    <string name="info_password_six">W haśle brak cyfry.</string>
    <string name="info_password_seven">W haśle brak znaku specjalnego.</string>

    <string name="info_passwordTwo_one">Hasła są takie same.</string>
    <string name="info_passwordTwo_two">Hasła nie są takie same.</string>


    <string name="login">Login</string>
    <string name="name_email_com">name@email.com</string>
    <string name="opis">Opis:</string>
    <string name="new_box_name">Nazwa</string>
    <string name="information_form">Tworzenie nowegej kolekcji.</string>
    <string name="box_sample_name">Box 1</string>
    <string name="box_saple_quantity">12 szt.</string>
    <string name="todo">TODO</string>
    <string name="dodaj_opis_pojemnika">Dodaj opis pojemnika</string>
    <string name="przykadowy_opis">Opis</string>
    <string name="zapisz">Zapisz</string>
    <string name="zr_b_zdi_cie">Zrób zdięcie</string>
    <string name="zmie_kolor_pojemnika">Zmień kolor pojemnika</string>
    <string name="zmien_kolor_czcionki">Zmien kolor czcionki</string>
    <string name="ikona_zdiecie_pojemnika">Ikona/zdiecie pojemnika</string>
    <string name="nazwa">Nazwa</string>
    <string name="wybierz_kolor">Wybierz kolor tła</string>
    <string name="wybierz_kolor_czcionki">Wybierz kolor czcionki</string>
    <string name="resetuj_formularz">Resetuj formularz</string>
    <string name="password">Hasło</string>
    <string name="wpisz_swoj_login">Wpisz swój login.</string>
    <string name="haslo_nie_moze_być_krotsze_niz_6_znakow">Hasło nie może być krótsze niż 6 znaków, posiadać przynajmniej jedną cyfrę, jedną durzą literą oraz znak specjalny.</string>
    <string name="powtorz_haslo">Powtórz hasło.</string>
    <string name="i">i</string>
    <string name="utworz_konto">Utwórz konto.</string>
    <string name="tworzenie_nowego_konta">Tworzenie nowego konta.</string>
    <string name="tworzenie_nowej_kolekcji">Tworzenie nowego kolekcji.</string>
    <string name="podaj_nazwe_kolekcji">Podaj nazwę kolekcji.</string>
    <string name="tworzenie_nowego_albumu">Tworzenie nowego albumu.</string>
    <string name="utworz_nowy_zbior">Utwórz nowy zbiór.</string>
    <string name="dodaj_nowa_kolekcje">Dodaj nową kolekcję.</string>
    <string name="box">Box</string>
    <string name="dodaj_nowy_album">Dodaj nowy album.</string>
    <string name="album">Album</string>
    <string name="przykałdowe_zdięcie_albumu">Przykładowe zdjęcie albumu.</string>
    <string name="szt">szt.</string>
    <string name="utworzone">Utworzone: 22.11.2024</string>
    <string name="nowa_kolekcja_dodana">*Nowa kolekcja dodana.</string>
    <string name="na_poczatku_nazwy_nie_moze_byc_bialego_znaku">*Na poczatku nazwy nie może być białego znaku.</string>
    <string name="box_one">Box 1</string>
    <string name="podaj_poprawna_nazwe_kolekcji">Podaj poprawną nazwę kolekcji.</string>
    <string name="wpisz_login_oraz_haslo_aby_sie_zalogowac">Wpisz login oraz hasło, aby się zalogować.</string>
    <string name="zaloguj_sie">Zaloguj się</string>
    <string name="zapamietaj_mnie">Zapamietaj mnie</string>
    <string name="dodawanie_nowej_kolekcji">Dodawanie nowej kolekcji.</string>
    <string name="otworz_ustawienia">Otwórz ustawienia.</string>
    <string name="ikona_konta">Ikona konta</string>
    <string name="logo_collectify">Logo Collectify</string>
    <string name="login_lub_haslo">Login lub hasło niepoprawne.</string>
    <string name="litera_i">i</string>


</resources>