<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".CreateCollection">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/collectifyCoolor"
                android:padding="5dp"
                android:text="@string/utworz_nowy_zbior"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageButton
                            android:id="@+id/openCreateBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:contentDescription="@string/dodaj_nowa_kolekcje"
                            android:src="@drawable/boxicon" />

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/box"
                            android:textAlignment="center"
                            android:textColor="@color/collectifyCoolor"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <ImageButton
                            android:id="@+id/openCreateAlbum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:contentDescription="@string/dodaj_nowy_album"
                            android:src="@drawable/albumicon" />

                        <TextView
                            android:id="@+id/textView32"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/album"
                            android:textAlignment="center"
                            android:textColor="@color/collectifyCoolor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>