<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".CreateNewBox">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:id="@+id/boxVidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:id="@+id/boxPhoto"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/ikona_zdiecie_pojemnika"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/boxTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/box_sample_name"
                            android:textColor="@color/collectifyCoolor"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/boxContents"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/box_saple_quantity"
                            android:textColor="@color/collectifyCoolor"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/boxCreationDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:text="@string/utworzone"
                            android:textColor="@color/collectifyCoolor"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/collectifyCoolor"
                    android:padding="5dp"
                    android:text="@string/information_form"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/dram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/boxName"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:drawableTint="@color/collectifyCoolor"
                        android:ems="10"
                        android:hint="@string/nazwa"
                        android:inputType="text"
                        android:maxLength="40"
                        android:padding="5dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/collectifyCoolor"
                        android:textSize="18sp" />
                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/boxInformation"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/przykadowy_opis"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:maxLines="10"
                    android:padding="5dp"
                    android:scrollbars="vertical"
                    android:textAlignment="viewStart"
                    android:textColor="@color/collectifyCoolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:padding="15dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp">

                        <ImageButton
                            android:id="@+id/changeTextColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:contentDescription="@string/zmien_kolor_czcionki"
                            android:src="@drawable/changetextcoloricon"
                            app:tint="@color/collectifyCoolor" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:padding="15dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp">

                        <ImageButton
                            android:id="@+id/changeBoxColor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:contentDescription="@string/zmie_kolor_pojemnika"
                            android:src="@drawable/changeboxcolor"
                            app:tint="@color/collectifyCoolor" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:padding="15dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="5dp">

                        <ImageButton
                            android:id="@+id/addPhotoButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="clip_vertical|center_horizontal"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:backgroundTint="#FFFFFF"
                            android:contentDescription="@string/zr_b_zdi_cie"
                            android:src="@drawable/addphoto"
                            app:tint="@color/collectifyCoolor" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|center|end"
                    android:gravity="bottom|end"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/podaj_nazwe_kontenera"
                        android:textAlignment="center"
                        android:textColor="#C82323" />

                    <LinearLayout
                        android:id="@+id/linearLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|center|end"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="15dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="5dp">

                            <ImageButton
                                android:id="@+id/resetForm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:contentDescription="@string/resetuj_formularz"
                                android:src="@drawable/reseticon"
                                app:tint="@color/collectifyCoolor" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="15dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="5dp">

                            <ImageButton
                                android:id="@+id/save"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:background="@color/white"
                                android:contentDescription="@string/zapisz"
                                android:src="@drawable/saveicon"
                                app:tint="@color/collectifyCoolor" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>